# py-example-mssql

./: Dockerfile  docker_compose.yml  main.py  pyproject.toml  requirements.txt
src/: settings.py
