[tool.poetry]
name = "py-example-project"
version = "0.1.0"
description = ""
authors = ["Alvaro Escalona <escalona.alvaro.13@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pyodbc = "^5.2.0"
pandas = "^2.2.3"
pydantic-settings = "^2.6.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
